--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  width : 100vw;
+  height : 100vh;
+  text-align: center;
+  margin : 0;
+  padding : 0;
+}
