--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,110 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root{
+  --black : #000000;
+  --white : #ffffff;
+
+  /*gray*/
+  --gray-100 : #F3F4F6;
+  --gray-200 : #DCDCDC;
+  --gray-300 : #BABABA;
+  --gray-400 : #A6A6AD;
+  --gray-500 : #898994;
+  --gray-600 : #6C6D7C;
+  --gray-700 : #515363;
+  --gray-800 : #393B4B;
+  --gray-900 : #232532;
+
+  /*red*/
+  --red-100 : #FFEFEF;
+  --red-200 : #FFBDBD;
+  --red-300 : #FF9292;
+  --red-400 : #FF6D6D;
+  --red-500 : #FF2C2C;
+  --red-600 : #EF0000;
+  --red-700 : #BF0000;
+  --red-800 : #920000;
+  --red-900 : #700000;
+
+  /*Burgundy*/
+  --burgundy-100 : #FCF1F0;
+  --burgundy-200 : #F6C3C1;
+  --burgundy-300 : #F19895;
+  --burgundy-400 : #ED746F;
+  --burgundy-500 : #D8534D;
+  --burgundy-600 : #BD3C36;
+  --burgundy-700 : #9F2B23;
+  --burgundy-800 : #7E1E18;
+  --burgundy-900 : #5D1510;
+
+  /*Coral*/
+  --coral-100 : #FCF1ED;
+  --coral-200 : #F9D6CA;
+  --coral-300 : #F4B8A3;
+  --coral-400 : #F0997D;
+  --coral-500 : #DA7656;
+  --coral-600 : #BC5735;
+  --coral-700 : #9A3A1C;
+  --coral-800 : #73280F;
+  --coral-900 : #521E08;
+
+  /*Yelllow*/
+  --yellow-100 : #FEFAE8;
+  --yellow-200 : #FDF3B0;
+  --yellow-300 : #FBEA7D;
+  --yellow-400 : #F9DE57;
+  --yellow-500 : #F7D047;
+  --yellow-600 : #D2B03A;
+  --yellow-700 : #A68A2C;
+  --yellow-800 : #77631D;
+  --yellow-900 : #4A3E0F;
+
+  /*Green*/
+  --green-100 : #FAFCEA;
+  --green-200 : #EBF8BF;
+  --green-300 : #D4F096;
+  --green-400 : #B8E376;
+  --green-500 : #98D05C;
+  --green-600 : #76B548;
+  --green-700 : #608F32;
+  --green-800 : #436620;
+  --green-900 : #2A3F11;
+
+  /*Blue*/
+  --blue-100 : #F4F7FB;
+  --blue-200 : #E3F1FE;
+  --blue-300 : #BDDEFC;
+  --blue-400 : #95C6FA;
+  --blue-500 : #63A5F1;
+  --blue-600 : #377CDE;
+  --blue-700 : #2960B2;
+  --blue-800 : #1B4582;
+  --blue-900 : #0F2C56;
+
+  /*Violet*/
+  --violet-100 : #F8F8FC;
+  --violet-200 : #D8D7F6;
+  --violet-300 : #B6AFE8;
+  --violet-400 : #877CD0;
+  --violet-500 : #785ECB;
+  --violet-600 : #603AAE;
+  --violet-700 : #432687;
+  --violet-800 : #30166C;
+  --violet-900 : #281162;
+
+  /*Indigo*/
+  --indigo-100 : #ECF3FE;
+  --indigo-200 : #CADEFD;
+  --indigo-300 : #A5BFF7;
+  --indigo-400 : #859BEE;
+  --indigo-500 : #6475DB;
+  --indigo-600 : #4951C1;
+  --indigo-700 : #392983;
+  --indigo-800 : #3833A2;
+  --indigo-900 : #301C62;
+}
+
 
 .container{
   width : 100vw;
@@ -18,4 +122,6 @@ code {
   text-align: center;
   margin : 0;
   padding : 0;
+
+  color : var(--gray-100);
 }
