--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ code {
 :root{
   --black : #000000;
   --white : #ffffff;
+  --primary : #603AAE;
 
   /*gray*/
   --gray-100 : #F3F4F6;
@@ -59,7 +60,7 @@ code {
   --coral-800 : #73280F;
   --coral-900 : #521E08;
 
-  /*Yelllow*/
+  /* Yellow */
   --yellow-100 : #FEFAE8;
   --yellow-200 : #FDF3B0;
   --yellow-300 : #FBEA7D;
