--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -29,8 +29,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
-    background-color: lightsteelblue;
 }
 
 .top-icon{
@@ -44,10 +42,62 @@
 
 .top-nav-text-container{
     width : 35vw;
+    height : 30px;
 
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 
     font-size : 1.125rem;
+}
+
+.top-nav-text-container h1{
+    height : 30px;
+    text-align: center;
+
+    display: flex;
+    align-items: center;
+    /*text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);*/
+}
+
+.style-home{
+    color : var(--white);
+}
+
+.style-not-home{
+    color : var(--black);
+}
+
+.style-current-white{
+    border-bottom: 3px solid var(--white);
+}
+
+.style-current-black{
+    border-bottom: 3px solid var(--black);
+}
+
+.style-not-current{
+    border-bottom: 3px solid transparent;
+}
+
+/* vertical navigation */
+.vertical-navigation-container{
+    width : 32px;
+    height : 176px;
+
+    position : fixed;
+    bottom : 82px;
+    right : 14px;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.vertical-icons{
+    width : 32px;
+    height : 32px;
 }
