--- a/src/styles/pages/HomePage.css
+++ b/src/styles/pages/HomePage.css
@@ -2,6 +2,6 @@
     width : 100vw;
     height : 100%;
 
-    margin-top :50px;
-    background-color: floralwhite;
+    /*margin-top :50px;*/
+    background-color: var(--gray-400);
 }
