--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -24,7 +24,7 @@
 .top-nav-container{
     z-index : 999;
 
-    width : 100%;
+    width : 100vw;
     height : 50px;
 
     position : fixed;
@@ -36,8 +36,8 @@
 }
 
 .top-icon{
-    width :24px;
-    height : 24px;
+    width :48px;
+    height : 48px;
 
     padding : 12px;
 
@@ -49,7 +49,7 @@
 .top-nav-text-container{
     padding : 12px;
 
-    width : 35%;
+    width : 150px;
     height : 30px;
 
     display: flex;
