--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -47,9 +47,9 @@
 }
 
 .top-nav-text-container{
-    padding : 12px;
+    /*padding : 12px;*/
 
-    width : 150px;
+    width : 160px;
     height : 30px;
 
     display: flex;
