--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   overflow-y: hidden;
+
+  width :100vw;
+  height : 100vh;
+}
+
+#root{
+  width : 100vw;
+  height : 100vh;
 }
 
 video {
@@ -15,6 +23,7 @@ video {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
 :root {
   --black: #000000;
   --white: #ffffff;
@@ -240,4 +249,10 @@ code {
   width: 54px;
   height: 54px;
   padding: 12px;
+}
+
+
+.renderImg{
+  width : 100vw;
+  height : 100vh;
 }
