--- a/src/styles/Login/LoginPage.css
+++ b/src/styles/Login/LoginPage.css
@@ -1,6 +1,29 @@
 .login-container{
     width : 100vw;
     height : 100vh;
+}
 
-    background-color: #2A3F11;
+.login-background-img{
+    width : 100vw;
+    height : 100vh;
+}
+
+.kakao-button-container{
+    width : 100vw;
+    height : 20vh;
+
+    position: absolute;
+    bottom : 200px;
+    right : 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 900;
+}
+
+.kakao-login-button{
+    z-index: 999;
 }
