--- a/src/styles/Login/Auth.css
+++ b/src/styles/Login/Auth.css
@@ -1,4 +1,24 @@
 .text{
-    color :black;
-    font-size : 12px;
+    color : black;
+    font-size : 1.2rem;
+
+    word-break:break-all;
+    margin : 1rem;
+}
+
+.container h1{
+    font-size : 3rem;
+    margin-bottom : 1rem;
+}
+
+.container{
+    width : 100vw;
+    height : 100vh;
+
+    background-color : var(--blue-300);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
