--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -105,3 +105,101 @@
     justify-content: space-between;
     align-items: center;
 }
+
+/* Top Bar */
+.top-bar-container{
+    width : 100vw;
+    height : 50px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: #377cde;
+}
+
+.top-bar-inner-left-container{
+    width : 33vw;
+    height : 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--blue-300);
+}
+
+.top-bar-inner-center-container{
+    width : 33vw;
+    height : 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--blue-400);
+}
+
+.top-bar-inner-text-type-user{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+
+    color: #000000;
+
+    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.top-bar-inner-text-type-page{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+
+}
+
+.top-bar-inner-right-container{
+    width : 33vw;
+    height : 100%;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    background-color: var(--blue-500);
+}
+
+.before-button-container{
+    width : 16.5vw;
+    height : 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--blue-200);
+}
+
+.left-text-container{
+    width : 16.5vw;
+    height : 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--blue-200);
+}
+
+.right-icon-container{
+    width : 11vw;
+    height : 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: var(--blue-300);
+}
