--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -116,7 +116,8 @@
     justify-content: space-between;
     align-items: center;
 
-    background-color: #377cde;
+    background-color: var(--gray-100);
+
 }
 
 .top-bar-inner-left-container{
@@ -127,7 +128,6 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--blue-300);
 }
 
 .top-bar-inner-center-container{
@@ -138,7 +138,6 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--blue-400);
 }
 
 .top-bar-inner-text-type-user{
@@ -172,7 +171,6 @@
     justify-content: flex-end;
     align-items: center;
 
-    background-color: var(--blue-500);
 }
 
 .before-button-container{
@@ -181,7 +179,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--blue-200);
 }
 
 .left-text-container{
@@ -190,7 +187,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--blue-200);
 }
 
 .right-icon-container{
@@ -200,6 +196,4 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    background-color: var(--blue-300);
 }
