--- a/src/styles/pages/MyPage.css
+++ b/src/styles/pages/MyPage.css
@@ -2,44 +2,17 @@
     width : 100vw;
     height : 100vh;
 
-    background-color: #0f2c56;
+    background-color: var(--yellow-100);
 }
 
-
-/* dropdown*/
-.dropdown-container{
-    width : 140px;
-    height : 100px;
-
-    position : absolute;
-    top : 12px;
-    right : 12px;
-
-    z-index: 999;
-
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
-    background-color: white;
+.my-page-top-container{
+    width : 100vw;
+    height : 50px;
 }
 
-.dropdown-list-item{
-    width : 140px;
-    height : 34px;
+.my-page-bottom-container{
+    width : 100vw;
+    height : 48px;
 
-
-    padding: 10px;
-
-    display: flex;
-    align-items: center;
-
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    border-radius: 5px;
-
-    color: #000000;
-}
-
-.dropdown-list-item:hover{
-    background-color: #DCDCDC;
+    background-color: var(--red-200);
 }
