--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -3,11 +3,12 @@
     z-index : 999;
 
     position: fixed;
-    bottom:0;
+    bottom : 0;
 
     width : 100vw;
     height : 48px;
 
+    /*background-color: white;*/
     display: grid;
     grid-template-columns: repeat(3,1fr);
     align-items: center;
@@ -19,6 +20,28 @@
     height:2rem;
 }
 
+.upload-button input[type="file"] {
+    /* 파일 필드 숨기기 */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip:rect(0,0,0,0);
+    border: 0;
+}
+
+.upload input[type="file"] {  /* 파일 필드 숨기기 */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip:rect(0,0,0,0);
+    border: 0;
+}
 
 /* Top Navigation CSS */
 .top-nav-container{
@@ -116,8 +139,6 @@
     justify-content: space-between;
     align-items: center;
 
-    background-color: var(--gray-100);
-
 }
 
 .top-bar-inner-left-container{
@@ -190,10 +211,19 @@
 }
 
 .right-icon-container{
-    width : 11vw;
+    min-width : 11vw;
+    max-width : 50%;
+    /*width : 11vw;*/
     height : 100%;
 
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.alarm-icon{
+    padding : 16px;
+
+    width : 54px;
+    height : 54px;
 }
