--- a/src/styles/pages/MyPage.css
+++ b/src/styles/pages/MyPage.css
@@ -2,7 +2,9 @@
     width : 100vw;
     height : 100vh;
 
-    background-color: var(--yellow-100);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .my-page-top-container{
@@ -14,5 +16,85 @@
     width : 100vw;
     height : 48px;
 
-    background-color: var(--red-200);
+    position: fixed;
+    bottom : 0;
 }
+
+.my-page-user-info-outer-container{
+    width : 100vw;
+    height : calc(40% - 50px);
+    align-items: center;
+}
+
+.my-page-short-form-outer-container{
+    margin-top : 10px;
+    padding-top : 10px;
+
+    border-top : 2px solid var(--gray-200);
+    width : 90vw;
+    height : auto;
+
+    display: grid;
+    justify-items: center;
+    grid-gap :10px;
+    grid-template-columns: repeat(2,1fr);
+
+}
+
+.my-page-user-default-info-container{
+    width : 100vw;
+    height : 80%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.my-page-user-introduction{
+    margin : 5px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+
+    color: #000000;
+}
+
+.my-page-user-follow-info-container{
+    width : 100vw;
+    height : 20%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    line-height: 20px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+
+    color: #000000;
+}
+
+.my-page-following-number{
+    border-right : 2px solid var(--gray-200);
+    width : 50vw;
+    min-height: 42px;
+    height : 80%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.my-page-follow-number{
+    width : 50vw;
+    min-height: 42px;
+    height : 80%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
