--- a/src/styles/components/View/ShortForm.css
+++ b/src/styles/components/View/ShortForm.css
@@ -1,14 +1,14 @@
-.short-form-container{
-    width : 100vw;
-    height : 100vh;
-    background-color: var(--blue-400);
+.short-form-container {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--black);
 }
 
-.short-form{
-    object-fit: cover;
+.short-form {
+  object-fit: cover;
 }
 
-.swiper-container{
-    width : 100vw;
-    height : 100vh;
+.swiper-container {
+  width: 100vw;
+  height: 100vh;
 }
