--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -1,251 +1,286 @@
 /* Bottom Navigation CSS */
-.bottom-nav-container{
-    z-index : 999;
+.bottom-nav-container {
+  z-index: 999;
 
-    position: fixed;
-    bottom : 0;
+  position: fixed;
+  bottom: 0;
 
-    width : 100%;
-    height : 48px;
+  width: 100%;
+  height: 48px;
 
-    /*background-color: white;*/
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    align-items: center;
-    justify-items: center;
+  /*background-color: white;*/
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
 }
 
-.bottom-icon{
-    width:2rem;
-    height:2rem;
+.bottom-nav-container-bgwhite {
+  z-index: 999;
+
+  position: fixed;
+  bottom: 0;
+
+  width: 100%;
+  height: 48px;
+
+  /*background-color: white;*/
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-items: center;
+
+  background-color: white;
 }
 
-.upload-button input[type="file"] {
-    /* 파일 필드 숨기기 */
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip:rect(0,0,0,0);
-    border: 0;
+.bottom-icon {
+  width: 2rem;
+  height: 2rem;
 }
 
-.active{
-    background-color: white;
-    border-radius: 50%;
+.upload-button input[type='file'] {
+  /* 파일 필드 숨기기 */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.active {
+  background-color: white;
+  border-radius: 50%;
 }
 
 /* Top Navigation CSS */
-.top-nav-container{
-    z-index : 999;
+.top-nav-container {
+  z-index: 999;
 
-    width : 100vw;
-    height : 50px;
+  width: 100vw;
+  height: 74px;
 
-    position : fixed;
-    top : 24px;
+  top: 0px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.top-nav-container-bg {
+  z-index: 999;
+
+  width: 100vw;
+  height: 74px;
+
+  top: 0px;
+
+  position: fixed;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
 }
 
-.top-icon{
-    width :48px;
-    height : 48px;
+.top-icon {
+  width: 22px;
+  height: 22px;
 
-    padding : 12px;
+  position: fixed;
 
-    position: fixed;
-    right : 12px;
-    top : 24px;
+  right: 24px;
+  top: 24px;
 }
 
-.top-nav-text-container{
-    /*padding : 12px;*/
+.top-nav-text-container {
+  /*padding : 12px;*/
 
-    width : 160px;
-    height : 30px;
+  width: 160px;
+  height: 30px;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 
-    font-size : 1.125rem;
+  font-size: 1.125rem;
 }
 
-.top-nav-text-container h1{
-    height : 30px;
-    text-align: center;
+.top-nav-text-container h1 {
+  height: 30px;
+  text-align: center;
 
-    display: flex;
-    align-items: center;
-    /*text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);*/
+  display: flex;
+  align-items: center;
+  /*text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);*/
 }
 
-.style-home{
-    color : var(--white);
+.style-home {
+  color: var(--white);
 }
 
-.style-not-home{
-    color : var(--black);
+.style-not-home {
+  color: var(--black);
 }
 
-.style-current-white{
-    border-bottom: 3px solid var(--white);
+.style-current-white {
+  border-bottom: 3px solid var(--white);
 }
 
-.style-current-black{
-    border-bottom: 3px solid var(--black);
+.style-current-black {
+  border-bottom: 3px solid var(--black);
 }
 
-.style-not-current{
-    border-bottom: 3px solid transparent;
+.style-not-current {
+  border-bottom: 3px solid transparent;
 }
 
 /* vertical navigation */
-.vertical-navigation-container{
-    z-index : 999;
+.vertical-navigation-container {
+  z-index: 999;
 
-    width : 32px;
-    height : 216px;
+  width: 32px;
+  height: 216px;
 
-    position : fixed;
-    bottom : 82px;
-    right : 14px;
+  position: fixed;
+  bottom: 82px;
+  right: 14px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Top Bar */
-.top-bar-container{
-    width : 100vw;
-    height : 50px;
+.top-bar-container-bg {
+  z-index: 999;
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  width: 100vw;
+  height: 74px;
 
+  top: 0px;
+
+  position: fixed;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
 }
 
-.top-bar-inner-left-container{
-    width : 33vw;
-    height : 100%;
+.top-bar-inner-left-container {
+  width: 33vw;
+  height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.top-bar-inner-center-container{
-    width : 33vw;
-    height : 100%;
+.top-bar-inner-center-container {
+  width: 33vw;
+  height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.top-bar-inner-text-type-user{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
+.top-bar-inner-text-type-user {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
 
-    color: #000000;
+  color: #000000;
 
-    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.top-bar-inner-text-type-page{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
+.top-bar-inner-text-type-page {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
 
-    display: flex;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
 
-    color: #000000;
-
+  color: #000000;
 }
 
-.top-bar-inner-right-container{
-    width : 33vw;
-    height : 100%;
+.top-bar-inner-right-container {
+  width: 33vw;
+  height: 100%;
 
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.before-button-container{
-    width : 16.5vw;
-    height : 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.before-button-container {
+  width: 16.5vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.left-text-container{
-    width : 16.5vw;
-    height : 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.left-text-container {
+  width: 16.5vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.right-icon-container{
-    min-width : 11vw;
-    max-width : 50%;
-    /*width : 11vw;*/
-    height : 100%;
+.right-icon-container {
+  min-width: 11vw;
+  max-width: 50%;
+  /*width : 11vw;*/
+  height: 100%;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.alarm-icon{
-    padding : 16px;
+.alarm-icon {
+  padding: 16px;
 
-    width : 54px;
-    height : 54px;
+  width: 54px;
+  height: 54px;
 }
 
-.dropdown-container{
-    position: absolute;
-    top:20px;
-    right : 20px;
+.dropdown-container {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 
-    width : 135px;
-    height : auto;
+  width: 135px;
+  height: auto;
 
-    background: white;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
+  background: white;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 
-.dropdown-list-item{
-    width : 135px;
-    height : 38px;
-    border-radius: 5px;
+.dropdown-list-item {
+  width: 135px;
+  height: 38px;
+  border-radius: 5px;
 
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    text-indent: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-indent: 10px;
 }
 
-.dropdown-list-item:hover{
-    background-color: var(--gray-300);
+.dropdown-list-item:hover {
+  background-color: var(--gray-300);
 }
