--- a/src/styles/components/common/Navigation.css
+++ b/src/styles/components/common/Navigation.css
@@ -157,6 +157,22 @@
 }
 
 /* Top Bar */
+.page-left-trans {
+  width: 100%;
+  height: 400px;
+  background-color: violet;
+  animation: moveToLeft 0.4s ease-in-out;
+  animation-delay: 5ms;
+}
+@keyframes moveToLeft {
+  0% {
+    transform: translateX(500px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
 .top-bar-container-bg {
   z-index: 999;
 
