--- a/src/styles/components/Modal/Vertical/Comment.css
+++ b/src/styles/components/Modal/Vertical/Comment.css
@@ -5,9 +5,10 @@
     z-index: 999;
 
     position: absolute;
+
     bottom : 0;
 
-    background-color: #FFFFFF;
+    background-color: white;
 }
 
 .comment-modal-top-nav{
@@ -17,7 +18,7 @@
     align-items: center;
     justify-content: flex-start;
 
-    border-bottom : 2px solid #F1F3F5;
+    border-bottom : 2px solid var(--gray-200);
 }
 
 .comment-modal-top-nav-text{
@@ -55,7 +56,7 @@
     width : 100vw;
     height : 70px;
 
-    border-bottom: 0.5px solid #F1F3F5;
+    border-bottom : 1px solid var(--gray-200);
 }
 
 .comment-item-inner-container{
@@ -104,3 +105,18 @@
     width : auto;
 }
 
+.comment-item-register-comment-container{
+    width : 100%;
+    height : 70px;
+
+    display: flex;
+    align-items: center;
+
+    border-bottom : 1px solid var(--gray-200);
+}
+
+.comment-modal-input{
+    width : 100%;
+    outline: none;
+    margin-left : 10px;
+}
