--- a/src/styles/pages/UploadPage.css
+++ b/src/styles/pages/UploadPage.css
@@ -1,7 +1,6 @@
 .upload-page-container{
     width : 100vw;
     height : 100vh;
-
     overflow-x : hidden;
 }
 
@@ -24,13 +23,11 @@
 }
 
 .upload-page-sf-info-container{
-    margin-top : 26px;
-    margin-right: 14px;
-    margin-left: 14px;
+    margin: 26px 14px;
 
     width : calc(100% - 28px);
     min-height : 430px;
-    height : 430px;
+    height : 100%;
 }
 
 .upload-page-bottom-nav-container{
@@ -128,3 +125,45 @@
     border: 1px solid var(--primary);
 }
 
+.upload-page-category-outer-container{
+    width : 100%;
+    height : 100px;
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+.upload-page-category-container{
+    width : 100%;
+    height : 50px;
+    border: 1px solid rgba(136, 136, 136, 0.65);
+    border-radius: 7px;
+    margin-top : 8px;
+
+    display: flex;
+    align-items: center;
+    padding-left : 10px;
+}
+
+.upload-page-category-list-container{
+    width : 100%;
+    border: 1px solid rgba(136, 136, 136, 0.65);
+    border-radius: 7px;
+
+    margin-bottom : 150px;
+}
+
+.upload-page-category-list-container li{
+    width : 100%;
+    height : 50px;
+    display: flex;
+    padding-left : 10px;
+
+    align-items: center;
+    border-bottom : 1px solid rgba(136, 136, 136, 0.65);
+}
+
+.upload-page-category-list-container li:hover{
+    background-color: var(--gray-300);
+}
