--- a/src/styles/pages/Signup.css
+++ b/src/styles/pages/Signup.css
@@ -2,16 +2,12 @@
     width : 100vw;
     height : 100vh;
 
-    background-color: #76b548;
-
     padding : 20px;
 }
 
 .signup-inner-container{
     width : 100%;
     height : 100%;
-
-    background-color: #cadefd;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,8 +15,11 @@
 
 .signup-input-container{
     width : 80%;
-    height : 300px;
-    background-color: #d4f096;
+    height : 350px;
+    margin-top : 55px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .submit-button{
@@ -34,6 +33,8 @@
     font-size : 20px;
     font-weight: 600;
 
+    margin-top : 10px;
+
     border : 1px solid var(--primary);
     border-radius: 10px;
     background-color: white;
@@ -43,14 +44,17 @@
     width : 100%;
     height : 45px;
 
+    margin-top : 10px;
     display: flex;
     align-items: center;
     justify-content: center;
 
     font-size : 20px;
     font-weight: 600;
+    color : white;
 
     border : 1px solid var(--primary);
     border-radius: 10px;
     background-color: var(--primary);
 }
+
