feat: 숏폼 댓글 가져오기/댓글달기/댓글삭제 && 숏폼 등록한 유저 프로필

--- a/src/styles/pages/UploadPage.css
+++ b/src/styles/pages/UploadPage.css
@@ -20,6 +20,15 @@
 
 .upload-page-file-thumbnail{
     border-radius: 15px;
+    width : 150px;
+    height : 150px;
+
+    object-fit: cover;
+
+    border : 1px solid var(--gray-200);
+
+    overflow-x: hidden;
+    word-break: break-all;
 }
 
 .upload-page-sf-info-container{
