--- a/src/styles/components/Modal/Vertical/Comment.css
+++ b/src/styles/components/Modal/Vertical/Comment.css
@@ -65,6 +65,15 @@
 
     display: flex;
     align-items: center;
+    flex-direction: row;
+}
+
+.comment-item-left{
+    width : calc(100% - 100px);
+    height:100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .comment-item-img-container{
@@ -76,6 +85,23 @@
     justify-content: center;
 
     margin-left : 10px;
+}
+
+.comment-item-my-comment{
+    justify-content: space-around;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width : 100px;
+    height : 100%;
+}
+
+.comment-item-delete{
+    color : red;
+}
+
+.comment-item-modify{
+    color:var(--gray-700);
 }
 
 .comment-item-img{
