--- a/src/styles/pages/Signup.css
+++ b/src/styles/pages/Signup.css
@@ -58,3 +58,10 @@
     background-color: var(--primary);
 }
 
+.pw-pw2-incorrect{
+    color : var(--red-500);
+}
+
+.pw-pw2-correct{
+    color : var(--blue-800);
+}
