--- a/src/styles/components/Card/Follow.css
+++ b/src/styles/components/Card/Follow.css
@@ -36,7 +36,7 @@
     width : 50px;
     height : 30px;
 
-    background-color: var(--gray-500);
+    background-color: var(--red-600);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
 
@@ -48,5 +48,21 @@
 }
 
 .delete-button:hover{
-    background-color: var(--red-600);
+    background-color: var(--red-900);
+}
+
+
+.follow-page-follow-button{
+    width : 50px;
+    height : 30px;
+
+    background-color: var(--gray-500);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+
+    color: #FFFFFF;
 }
