--- a/src/styles/pages/Signup.css
+++ b/src/styles/pages/Signup.css
@@ -1,67 +1,67 @@
-.signup-container{
-    width : 100vw;
-    height : 100vh;
+.signup-container {
+  width: 100vw;
+  height: 100vh;
 
-    padding : 20px;
+  padding: 20px;
 }
 
-.signup-inner-container{
-    width : 100%;
-    height : 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.signup-inner-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.signup-input-container{
-    width : 80%;
-    height : 350px;
-    margin-top : 55px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+.signup-input-container {
+  width: 80%;
+  height: 350px;
+  margin-top: 55px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
 }
 
-.submit-button{
-    width : 100%;
-    height : 45px;
+.submit-button {
+  width: 100%;
+  height: 45px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-size : 20px;
-    font-weight: 600;
+  font-size: 20px;
+  font-weight: 600;
 
-    margin-top : 10px;
+  margin-top: 10px;
 
-    border : 1px solid var(--primary);
-    border-radius: 10px;
-    background-color: white;
+  border: 1px solid var(--primary);
+  border-radius: 10px;
+  background-color: white;
 }
 
-.active-submit-button{
-    width : 100%;
-    height : 45px;
+.active-submit-button {
+  width: 100%;
+  height: 45px;
 
-    margin-top : 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    font-size : 20px;
-    font-weight: 600;
-    color : white;
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
 
-    border : 1px solid var(--primary);
-    border-radius: 10px;
-    background-color: var(--primary);
+  border: 1px solid var(--primary);
+  border-radius: 10px;
+  background-color: var(--primary);
 }
 
-.pw-pw2-incorrect{
-    color : var(--red-500);
+.pw-pw2-incorrect {
+  color: var(--red-500);
 }
 
-.pw-pw2-correct{
-    color : var(--blue-800);
+.pw-pw2-correct {
+  color: var(--blue-800);
 }
