--- a/src/styles/pages/Signup.css
+++ b/src/styles/pages/Signup.css
@@ -1,20 +1,23 @@
 .signup-container {
-  width: 100vw;
-  height: 100vh;
-
-  padding: 20px;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 96rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .signup-inner-container {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 34rem;
 }
 
 .signup-input-container {
-  width: 80%;
+  width: 95%;
   height: 350px;
   margin-top: 55px;
   display: flex;
@@ -30,7 +33,7 @@
   align-items: center;
   justify-content: center;
 
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: 600;
 
   margin-top: 10px;
@@ -49,7 +52,7 @@
   align-items: center;
   justify-content: center;
 
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: 600;
   color: white;
 
