--- a/src/styles/components/Modal/Vertical/TourInfo.css
+++ b/src/styles/components/Modal/Vertical/TourInfo.css
@@ -49,6 +49,8 @@
 }
 
 .tour-info-img{
+    margin-top: 3px;
+    margin-right: 3px;
     width : 100px;
     height : 100px;
     border-radius: 15px;
