--- a/src/styles/Login/Auth.css
+++ b/src/styles/Login/Auth.css
@@ -1,7 +1,6 @@
 .text{
-    color : black;
+    color : var(--black);
     font-size : 1.2rem;
-
     word-break:break-all;
     margin : 1rem;
 }
@@ -14,9 +13,7 @@
 .container{
     width : 100vw;
     height : 100vh;
-
     background-color : var(--blue-300);
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,5 +21,5 @@
 }
 
 .container{
-    background-color: white;
+    background: var(--white);
 }
