--- a/src/styles/Login/LoginPage.css
+++ b/src/styles/Login/LoginPage.css
@@ -11,23 +11,19 @@
 .kakao-button-container {
   width: 100vw;
   top: 280px;
-
   position: absolute;
   bottom: 70px;
   right: 0;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   z-index: 900;
 }
 
 .local-login-container {
   width: 200px;
   z-index: 999;
-  /*margin-bottom : 10px;*/
   margin: auto;
   text-align: center;
 }
@@ -37,12 +33,10 @@
   height: 45px;
   margin-top: 10px;
   border-radius: 10px;
-
   margin-bottom: 10px;
-
   font-weight: 400;
   font-size: 1rem;
-  color: white;
+  color: var(--white);
   background-color: var(--primary);
 }
 
@@ -53,12 +47,8 @@
 }
 
 .local-register-button {
-  color: white;
+  color: var(--white);
   font-size: 1rem;
   font-weight: 400;
   margin-top: 30px;
 }
-
-/* .kakao-login-button{
-    z-index: 999;
-} */
