--- a/src/styles/components/Button/FollowButton.css
+++ b/src/styles/components/Button/FollowButton.css
@@ -4,7 +4,7 @@
     padding: 3px 8px 3px 8px;
 
     height: 14px;
-    background: #FF0000;
+    background: var(--red-600);
     border : none;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 4px;
@@ -13,7 +13,7 @@
     font-weight: 700;
     font-size: 0.438rem;
     line-height: 1rem;
-    color: #FFFFFF;
+    color: var(--white);
 }
 
 .following-button{
@@ -22,7 +22,7 @@
     padding: 3px 8px 3px 8px;
 
     height: 14px;
-    background: #606060;
+    background: var(--follow-button);
     border : none;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 4px;
@@ -31,6 +31,6 @@
     font-weight: 700;
     font-size: 0.438rem;
     line-height: 1rem;
-    color: #FFFFFF;
+    color: var(--white);
 }
 
