--- a/src/styles/components/Card/Follow.css
+++ b/src/styles/components/Card/Follow.css
@@ -1,17 +1,14 @@
 .follow-card-container{
     width : 100vw;
     height : 80px;
-
     display: flex;
     align-items: center;
-
-    background-color: #F5F5F5;
+    background: var(--follow-card);
 }
 
 .follow-card-inner-container{
     width : 100%;
     height : 100%;
-
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -22,7 +19,6 @@
 
 .user-info-container{
     width : calc(100% - 90px);
-
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -35,34 +31,27 @@
 .delete-button{
     width : 50px;
     height : 30px;
-
     background-color: var(--red-600);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
-
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-
-    color: #FFFFFF;
+    color: var(--white);
 }
 
 .delete-button:hover{
     background-color: var(--red-900);
 }
 
-
 .follow-page-follow-button{
     width : 50px;
     height : 30px;
-
     background-color: var(--gray-500);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
-
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
-
-    color: #FFFFFF;
+    color: var(--white);
 }
