--- a/src/styles/components/Modal.css
+++ b/src/styles/components/Modal.css
@@ -1,9 +1,7 @@
 .container{
     width : 100vw;
     height : 100vh;
-
     background-color : var(--red-200);
-
     display: flex;
     flex-direction: column;
 
@@ -15,13 +13,11 @@
     height: 70vh;
     bottom :0;
     right : 0;
-
-    background-color: white;
+    background: var(--white);
 }
 
 .icon-position-right{
     position : absolute;
-
     top:0;
     right : 0;
 }
@@ -29,16 +25,13 @@
 .icon-container{
     width : 100vw;
     height : 54px;
-
     background-color: lightblue;
 }
 
 .icon-container div{
     width : auto;
     height : 54px;
-
     background-color: azure;
-
     display: flex;
     align-items: center;
 }
@@ -49,42 +42,33 @@
     font-style: normal;
     font-weight: 400;
     font-size: 1rem;
-
-    color: #000000;
+    color: var(--black);
 }
 
 .icon-container div h3{
     font-style: normal;
     padding : 12px 0;
-
     font-weight: 400;
     font-size: 13px;
-
-    color: #676767;
+    color: var(--follow-button);
 }
 
 .comment-container{
     width : 100vw;
     height : 75px;
-
     z-index: 999;
     background-color: var(--gray-300);
-
     display: flex;
     flex-direction: row;
-
     align-items: center;
-
-    border-bottom : 0.5px solid #676767;
+    border-bottom : 0.5px solid var(--follow-button);
 }
 
 .comment-container img{
     width : 50px;
     height : 50px;
-
     padding : 0;
     margin : 10px;
-
     border-radius: 50px;
 }
 
@@ -99,23 +83,18 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-
     display: flex;
     align-items: center;
     text-align: center;
-
-    color: #000000;
-
+    color: var(--black);
     margin : 0 5px;
 }
 
 .comment-info-container{
     width : auto;
     height: 8px;
-
     display: flex;
     flex-direction: row;
-
     margin : 5px;
 }
 
@@ -123,11 +102,9 @@
     font-style: normal;
     font-weight: 400;
     font-size: 0.5rem;
-
     display: flex;
     align-items: center;
     text-align: center;
-
-    color: #000000;
+    color: var(--black);
 }
 
