--- a/src/styles/components/Modal/Vertical/Comment.css
+++ b/src/styles/components/Modal/Vertical/Comment.css
@@ -1,14 +1,10 @@
 .comment-modal-container{
     width : 100vw;
     height : 70vh;
-
     z-index: 999;
-
     position: absolute;
-
     bottom : 0;
-
-    background-color: white;
+    background: var(--white);
 }
 
 .comment-modal-top-nav{
@@ -17,7 +13,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-
     border-bottom : 2px solid var(--gray-200);
 }
 
@@ -28,10 +23,8 @@
     display: flex;
     align-items: center;
     text-align: center;
-
     margin-left : 10px;
-
-    color: #000000;
+    color: var(--black);
 }
 
 .comment-modal-close-icon-container{
@@ -42,7 +35,6 @@
 .comment-item-list-outer-container{
     width : 100%;
     height : calc(100% - 40px);
-
     overflow-y: scroll;
 }
 
@@ -55,14 +47,12 @@
 .comment-item-outer-container{
     width : 100vw;
     height : 70px;
-
     border-bottom : 1px solid var(--gray-200);
 }
 
 .comment-item-inner-container{
     width : 100%;
     height : 100%;
-
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -79,11 +69,9 @@
 .comment-item-img-container{
     width : 50px;
     height : 50px;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     margin-left : 10px;
 }
 
@@ -97,7 +85,7 @@
 }
 
 .comment-item-delete{
-    color : red;
+    color : var(--red-600);
 }
 
 .comment-item-modify{
@@ -107,14 +95,12 @@
 .comment-item-img{
     width : 45px;
     height : 45px;
-
     border-radius: 50%;
 }
 
 .comment-item-text-container{
     width : auto;
     height : 100%;
-
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -134,10 +120,8 @@
 .comment-item-register-comment-container{
     width : 100%;
     height : 70px;
-
     display: flex;
     align-items: center;
-
     border-bottom : 1px solid var(--gray-200);
 }
 
