--- a/src/styles/components/Modal/Vertical/Share.css
+++ b/src/styles/components/Modal/Vertical/Share.css
@@ -1,13 +1,10 @@
 .share-modal-container{
     width : 100vw;
     height : 70vh;
-
     z-index: 999;
-
     position: absolute;
     bottom : 0;
-
-    background-color: white;
+    background: var(--white);
 }
 
 .share-modal-top-nav{
@@ -16,7 +13,6 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-
     border-bottom : 2px solid var(--gray-200);
 }
 
@@ -27,10 +23,8 @@
     display: flex;
     align-items: center;
     text-align: center;
-
     margin-left : 10px;
-
-    color: #000000;
+    color: var(--black);
 }
 
 .share-modal-close-icon-container{
