--- a/src/styles/components/common/AlertModal.css
+++ b/src/styles/components/common/AlertModal.css
@@ -1,11 +1,10 @@
 .alert-modal-container{
     width : 275px;
     height : 200px;
-    background: #F8F9FA;
+    background: var(--modal);
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.3);
     border-radius: 25px;
     position: absolute;
-
     z-index: 999;
     top : 25vh;
     left :14.5vw;
@@ -32,7 +31,6 @@
 .alert-modal-text-container{
     width : 100%;
     height : 100px;
-
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -62,9 +60,8 @@
 .button{
     width : 100px;
     height : 30px;
-
     border-radius: 10px;
-    background-color: white;
+    background: var(--white);
 }
 
 .ok{
@@ -74,7 +71,7 @@
 }
 
 .ok:hover{
-    color : white;
+    color : var(--white);
     background-color: var(--red-500);
 }
 
@@ -84,6 +81,6 @@
 }
 
 .no:hover{
-    color : white;
+    color : var(--white);
     background-color: var(--blue-800);
 }
