--- a/src/styles/components/common/ProfileInSF.css
+++ b/src/styles/components/common/ProfileInSF.css
@@ -1,20 +1,14 @@
 .profile-in-sf-container{
     width : 210px;
     height : 120px;
-
     position: absolute;
     bottom :10%;
-
     display: flex;
     flex-direction: row;
     align-items: flex-end;
     padding-left : 20px;
-
-    color : white;
-
+    color : var(--white);
     margin-bottom :35px;
-
-    /*background-color: #98d05c;*/
 }
 
 .profile-container{
@@ -25,7 +19,6 @@
 .follow-following-button-container{
     height : 100px;
     width : 80px;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -38,18 +31,15 @@
 .follow-button{
     width : 75px;
     height : 30px;
-
     border-radius: 10px;
     font-weight: 600;
     font-size : 0.9rem;
-
     background-color: var(--red-500);
 }
 
 .following-button{
     width : 75px;
     height : 30px;
-
     border-radius: 10px;
     font-weight: 600;
     font-size : 0.9rem;
