--- a/src/styles/components/common/Tag.css
+++ b/src/styles/components/common/Tag.css
@@ -3,9 +3,9 @@
     height: 20px;
     padding : 6px 12px 6px 12px;
     box-sizing: border-box;
-    background: #F3F4F6;
-    border: 1px solid #D1D5DB;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background: var(--gray-100);
+    border: 1px solid var(--tag-line);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 100px;
     text-align: center;
     display: flex;
@@ -13,7 +13,7 @@
 }
 
 .tag-container:hover{
-    background: #DCDCDC;
+    background: var(--gray-200);
 }
 
 .tag-text{
@@ -22,5 +22,5 @@
     font-size: 0.5rem;
     line-height: 0.625rem;
     text-align: center;
-    color: #000000;
+    color: var(--black);
 }
