--- a/src/styles/pages/MyPage.css
+++ b/src/styles/pages/MyPage.css
@@ -1,7 +1,6 @@
 .my-page-container {
   width: 100vw;
   height: 100vh;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +14,6 @@
 .my-page-bottom-container {
   width: 100vw;
   height: 48px;
-
   position: fixed;
   bottom: 0;
 }
@@ -29,11 +27,9 @@
 .my-page-short-form-outer-container {
   margin-top: 10px;
   padding-top: 10px;
-
   border-top: 2px solid var(--gray-200);
   width: 90vw;
   height: auto;
-
   display: grid;
   justify-items: center;
   grid-gap: 10px;
@@ -43,7 +39,6 @@
 .my-page-user-default-info-container {
   width: 100vw;
   height: 80%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,14 +50,12 @@
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-
-  color: #000000;
+  color: var(--black);
 }
 
 .my-page-user-follow-info-container {
   width: 100vw;
   height: 20%;
-
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -70,8 +63,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-
-  color: #000000;
+  color: var(--black);
 }
 
 .my-page-following-number {
@@ -79,7 +71,6 @@
   width: 50vw;
   min-height: 42px;
   height: 80%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,7 +81,6 @@
   width: 50vw;
   min-height: 42px;
   height: 80%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
