--- a/src/styles/pages/mypage/Follow.css
+++ b/src/styles/pages/mypage/Follow.css
@@ -1,19 +1,15 @@
 .follow-following-page-container{
     width : 100vw;
-    /*나중 변경*/
     height : 100vh;
 }
 
 .follow-following-page-inner-container{
     width : 100%;
     height : 45px;
-
     position: fixed;
     top : 74px;
     left:0;
-
-    background-color: white;
-
+    background: var(--white);
 }
 
 .follow-following-inner-container{
@@ -22,11 +18,9 @@
     height : 100%;
 }
 
-
 .follower-following-tab-container{
     width : 100vw;
     height : 45px;
-
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -36,22 +30,18 @@
 .not-current-tab-div{
     width : 50%;
     height : 100%;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     border-bottom : 1.5px solid var(--gray-200);
 }
 
 .current-tab-div{
     width : 50%;
     height : 100%;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     border-bottom : 3px solid var(--gray-800);
 }
 
@@ -59,16 +49,14 @@
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-
-    color: #000000;
+    color: var(--black);
 }
 
 .not-current-tab-span{
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-
-    color: #DCDCDC;
+    color: var(--gray-200);
 }
 
 
